# watcher

./: .gitignore  LICENSE  README.md  action.yml  example-sites.toml  example-workflow.yml  justfile  main.py  pyproject.toml  pytest.ini  rss_manager.py  scraper.py  sites.toml  storage.py  watcher-config.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: python-test.yml  scrape-from-file.yml  scrape-jank-progress.yml  scrape-multiple.yml  scrape-sites.yml  tracker.yml
content/: feed-viewer.html  history-explorer.html  history-viewer.js  viewer.html
content/demo-feed/: .metadata.json  20250812-023108.html  20250812-023108.md
content/disa-mil-news/: .metadata.json  20250814-034634636795.html  20250819-000700323240.html  20250820-180345320466.html
content/example-changelog/: .metadata.json  20250812-044112.html  20250812-060221.html  20250812-060514.html  20250812-081014.html  20250812-121239.html  20250812-160847.html  20250812-200812.html  20250813-003301.html  20250813-041441.html  20250814-023630996200.html  20250814-025204498435.html  20250814-025919579976.html  20250814-030731067787.html  20250814-032320760553.html  20250814-034603726723.html  20250814-034912132235.html  20250814-035305401868.html  20250814-035516500430.html  20250814-060257138770.html  20250814-120319371819.html  20250814-180322836182.html  20250815-000717704486.html  20250815-023546344251.html  20250815-060349876867.html  20250815-120306006094.html  20250815-175410504208.html  20250815-180330553618.html  20250816-000659567379.html  20250816-060237463577.html  20250816-120520197427.html  20250816-180322671659.html  20250817-000835272731.html  20250817-060305906394.html  20250817-120338090961.html  20250817-180237305702.html  20250818-000731537458.html  20250818-060309809640.html  20250818-120359400198.html  20250818-180325990188.html  (+75 more)
feeds/: disa-mil-news.xml  example-changelog.xml  example-changelog2.xml  html-only-test.xml  jank-lang-dot-org-slash-progress.xml  jank-progress.xml  markdown-test.xml  new-years-even-counter.xml  newyear-test.xml  nih-news.xml  stanford-geniue-home-assistant-news.xml  static-html-test.xml
tests/: __init__.py  test_diff_utils.py  test_history_reconstruction.py  test_lib.py  test_rss_manager.py  test_scraper.py  test_storage.py
(+147 files in other folders)
